llvm/test/Assembler/invalid-metadata-function-local-attachments.ll
; RUN: not llvm-as < %s -disable-output 2>&1 | FileCheck %s

define void @foo(i32 %v) {
entry:
; CHECK: <stdin>:[[@LINE+1]]:{{[0-9]+}}: error: invalid use of function-local name
  ret void, !foo !{i32 %v}
}
